Changement de couleur de texte des tarifs

--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
         <!-- Pricing -->
         <div id="pricing" class="cards-2 py-32">
             <div class="container px-4 sm:px-8">
-                <h2 class="mb-12 text-center lg:max-w-xl lg:mx-auto">Nos Services et Tarifs</h2>
+                <h2 class="mb-12 text-center lg:max-w-xl lg:mx-auto" style="color: white">Nos Services et Tarifs</h2>
                 <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
                     <!-- Card 1 -->
                     <div class="card">
@@ -255,7 +255,7 @@
                     </div>
                 </div>
                 <div class="text-center mt-12">
-                    <p class="text-gray-600">Les prix varient selon la durée de location et le type d'événement. Contactez-nous pour un devis personnalisé.</p>
+                    <p class="text-gray-600" style="color: white">Les prix varient selon la durée de location et le type d'événement. Contactez-nous pour un devis personnalisé.</p>
                 </div>
             </div>
         </div>
