ajout des images adapter

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <link href="css/styles.css" rel="stylesheet" />
 
         <!-- Favicon  -->
-        <link rel="icon" href="images/favicon.png" />
+        <link rel="icon" href="images/faviocon.jpg" />
     </head>
     <body data-spy="scroll" data-target=".fixed-top">
 
@@ -85,7 +85,7 @@
                     <a class="btn-solid-lg secondary" href="#your-link"><i class="fab fa-google-play"></i>Télécharger</a>
                 </div>
                 <div class="xl:text-right">
-                    <img class="inline" src="images/header-smartphone.png" alt="Application Gamedzi Rent" />
+                    <img class="inline" src="images/header-smartphone.jpg"width="50%" alt="Application Gamedzi Rent" />
                 </div>
             </div>
         </header>
@@ -272,7 +272,7 @@
                 </div>
                 <div class="lg:col-span-7">
                     <div class="xl:ml-14">
-                        <img class="inline" src="images/details-1.jpg" alt="Événement avec matériel loué" />
+                        <img class="inline" src="images/chaise.jpg" width="50%"alt="Événement avec matériel loué" />
                     </div>
                 </div>
             </div>
@@ -283,7 +283,7 @@
             <div class="container px-4 sm:px-8 lg:grid lg:grid-cols-12 lg:gap-x-12">
                 <div class="lg:col-span-7">
                     <div class="mb-12 lg:mb-0 xl:mr-14">
-                        <img class="inline" src="images/details-2.jpg" alt="Matériel événementiel" />
+                        <img class="inline" src="images/table.jpg" width="50%"alt="Matériel événementiel" />
                     </div>
                 </div>
                 <div class="lg:col-span-5">
@@ -394,7 +394,7 @@
         <div id="download" class="basic-5">
             <div class="container px-4 sm:px-8 lg:grid lg:grid-cols-2">
                 <div class="mb-16 lg:mb-0">
-                    <img src="images/conclusion-smartphone.png" alt="Application Gamedzi Rent" />
+                    <img src="images/dernier.jpg"width="50%" alt="Application Gamedzi Rent" />
                 </div>
                 <div class="lg:mt-24 xl:mt-44 xl:ml-12">
                     <p class="mb-9 text-gray-800 text-3xl leading-10">Téléchargez Gamedzi Rent et commencez à organiser vos événements en toute simplicité</p>
